# ArchDash

./: .coveragerc  .cursor-rules  .gitignore  API.md  CALLBACK_ANALYSIS_SUMMARY.md  CALLBACK_REFACTOR_PLAN.md  CAUTIOUS_REFACTOR_PLAN.md  CLEANUP_SUMMARY.md  CONTEXT_MENU_GUIDE.md  DEPENDENCY_DELETION_RESTRICTION.md  DEPENDENCY_FEATURES.md  FEATURE_RESET_PREVIEW.md  GRAPH_VISUALIZER_PLAN.md  INTERACTIVE_VISUALIZATION_ANALYSIS.md  INTERACTIVE_VISUALIZER_GUIDE.md  LESSON_LEARNED.md  MONACO_EDITOR_GUIDE.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PLOTLY_VISUALIZER_README.md  README.md  RECTANGULAR_LAYOUT_GUIDE.md  REFACTOR_PLAN.md  RELEASE_SUMMARY.md  TESTING_STRATEGY.md  TEST_COVERAGE_SUMMARY.md  TEST_MIGRATION_PLAN.md  TODO.md  UNIFIED_VISUALIZER_GUIDE.md  analyze_callbacks.py  app.py  baseline_test_results.txt  basic_graph_visualizer.py  callback_issues_analysis.py  callback_optimization_report.md  conftest.py  create_windows_exe_guide.md  debug_node_creation.py  demo.py  demo_enhanced_dependencies.py  (+35 more)
ArchDash_Windows_Python_v1.0.1/: README.txt  install.bat  install_fast.bat
ai/: ARCHITECTURE_IMPROVEMENT.md  CUMULATIVE_PLOT_FEATURE.md  ENHANCED_DEPENDENCIES_GUIDE.md  TEST_COVERAGE_SUMMARY.md  browser_console_issues_fix.md  demo_click_test.py  demo_dataflow.py  development_progress.md  layout_refactor_summary.md  plotting_feature_plan.md  plotting_implementation_summary.md  session_graph.py  task_analysis.md  task_progress.md
archdash/: __init__.py
assets/: modern_style.css
core/: __init__.py  graph.py
tests/: FINAL_FIX_REPORT.md  FIX_REPORT.md  (+107 more)
(+46 files in other folders)
