[metadata]
name = archdash
version = 1.1.7
author = readm
author_email = readm@example.com
description = A powerful architectural calculation tool for building and analyzing complex calculation graphs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Readm/ArchDash
project_urls =
    Bug Reports = https://github.com/Readm/ArchDash/issues
    Source = https://github.com/Readm/ArchDash
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
    Framework :: Dash

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    dash>=2.0.0
    dash-bootstrap-components==2.0.3
    dash-ace
    pandas>=1.0.0
    plotly>=5.0.0
    numpy>=1.20.0

[options.packages.find]
where = .
include = archdash*

[options.package_data]
archdash = assets/*

[options.entry_points]
console_scripts =
    archdash = archdash.app:main